hw3/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: application
  name: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
      - image: glacius27/repo:hw3
        name: application
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /app/config
          name: config-volume
        - mountPath: /app/secrets
          name: secrets
      volumes:
      - configMap:
          name: application-config
        name: config-volume
      - name: secrets
        secret:
          secretName: secret-appsettings
